--- a/index.html
+++ b/index.html
@@ -68,47 +68,17 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <a href="#">Dashboard</a>
-        <a href="#">Users</a>
-        <a href="#">Settings</a>
-        <a href="#">Reports</a>
-        <a href="#">Logout</a>
     </div>
 
     <!-- Main Content -->
     <div class="main-content">
         <h1>Welcome to AK Admin Dashboard</h1>
-        <p>Here you can manage all aspects of the application.</p>
-
-        <!-- Example of Cards -->
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="card text-white bg-primary mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">Users</h5>
-                        <p class="card-text">Manage your application's users.</p>
-                        <a href="#" class="btn btn-light">Go to Users</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="card text-white bg-success mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">Settings</h5>
-                        <p class="card-text">Configure system settings.</p>
-                        <a href="#" class="btn btn-light">Go to Settings</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="card text-white bg-danger mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">Reports</h5>
-                        <p class="card-text">View reports and analytics.</p>
-                        <a href="#" class="btn btn-light">Go to Reports</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <p>Download AK Admin Premium with the button below:</p>
+        
+        <!-- Download Button -->
+        <a href="https://cdn.discordapp.com/attachments/1174404879545012275/1288815899721338962/Latest_Ak_Admin_obfuscated_2.txt?ex=66fc7d97&is=66fb2c17&hm=9c13678b7da65be4a9f826ecad340417d73871a04343e84d0b48f8756f3653d4&" 
+           class="btn btn-primary btn-lg" 
+           download="AK_Admin_Premium.txt">Download AK Admin Premium</a>
     </div>
 
     <!-- Bootstrap JS -->
