--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             background-color: #343a40;
             padding-top: 20px;
             position: fixed;
+            width: 250px; /* Added width to sidebar */
         }
 
         .sidebar a {
@@ -68,6 +69,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <a href="#">Dashboard</a>
+        <a href="whitelist.html">Whitelist</a> <!-- Added Whitelist link -->
     </div>
 
     <!-- Main Content -->
