--- a/whitelist.html
+++ b/whitelist.html
@@ -96,22 +96,36 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        let whitelist = [];
+        // Load the whitelist from localStorage on page load
+        let whitelist = JSON.parse(localStorage.getItem("whitelist")) || [];
 
+        // Function to update the displayed whitelist
+        function updateWhitelistDisplay() {
+            document.getElementById("whitelistOutput").innerText = JSON.stringify(whitelist, null, 2);
+        }
+
+        // Initial display
+        updateWhitelistDisplay();
+
+        // Add button event listener
         document.getElementById("addButton").addEventListener("click", function() {
             const username = document.getElementById("username").value.trim();
             if (username && !whitelist.includes(username)) {
                 whitelist.push(username);
-                document.getElementById("whitelistOutput").innerText = JSON.stringify(whitelist, null, 2);
+                localStorage.setItem("whitelist", JSON.stringify(whitelist)); // Save to localStorage
+                updateWhitelistDisplay();
                 document.getElementById("username").value = ""; // Clear input
             }
         });
 
+        // Reset button event listener
         document.getElementById("resetButton").addEventListener("click", function() {
             whitelist = [];
-            document.getElementById("whitelistOutput").innerText = "";
+            localStorage.removeItem("whitelist"); // Clear from localStorage
+            updateWhitelistDisplay();
         });
 
+        // Download button event listener
         document.getElementById("downloadButton").addEventListener("click", function() {
             const blob = new Blob([`local whitelistedPlayers = {\n${whitelist.map(username => `    "${username}",`).join("\n")}\n}`], { type: 'text/plain' });
             const link = document.createElement("a");
