--- a/whitelist.html
+++ b/whitelist.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Whitelist Management</h1>
-        <input type="text" id="username" placeholder="Enter username" class="form-control">
+        <input type="text" id="username" placeholder="Enter username" class="form-control" />
         <button id="addButton" class="btn btn-primary">Add to Whitelist</button>
         <button id="resetButton" class="btn btn-danger">Reset Whitelist</button>
         <button id="downloadButton" class="btn btn-success">Download Whitelist</button>
@@ -25,7 +25,7 @@
         const usernameInput = document.getElementById('username');
 
         // Fetch the whitelist from the Node.js server
-        fetch('https://YOUR_REPLIT_URL/whitelist')
+        fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist')
             .then(response => response.json())
             .then(data => {
                 data.forEach(user => {
@@ -39,7 +39,7 @@
         document.getElementById('addButton').onclick = () => {
             const username = usernameInput.value.trim();
             if (username) {
-                fetch('https://YOUR_REPLIT_URL/whitelist', {
+                fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -61,7 +61,7 @@
 
         // Reset the whitelist
         document.getElementById('resetButton').onclick = () => {
-            fetch('https://YOUR_REPLIT_URL/whitelist', {
+            fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist', {
                 method: 'DELETE',
             })
             .then(response => {
@@ -76,7 +76,7 @@
 
         // Download whitelist as a Lua table
         document.getElementById('downloadButton').onclick = () => {
-            fetch('https://YOUR_REPLIT_URL/whitelist')
+            fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist')
                 .then(response => response.json())
                 .then(users => {
                     const luaContent = `local whitelistedPlayers = {\n${users.map(user => `  "${user}",`).join('\n')}\n}`;
