--- a/whitelist.html
+++ b/whitelist.html
@@ -25,15 +25,22 @@
         const usernameInput = document.getElementById('username');
 
         // Fetch the whitelist from the Node.js server
-        fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist')
-            .then(response => response.json())
-            .then(data => {
-                data.forEach(user => {
-                    const li = document.createElement('li');
-                    li.textContent = user;
-                    whitelistUsers.appendChild(li);
-                });
-            });
+        const fetchWhitelist = () => {
+            fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist')
+                .then(response => response.json())
+                .then(data => {
+                    whitelistUsers.innerHTML = ''; // Clear the existing list
+                    data.forEach(user => {
+                        const li = document.createElement('li');
+                        li.textContent = user;
+                        whitelistUsers.appendChild(li);
+                    });
+                })
+                .catch(err => console.error('Error fetching whitelist:', err));
+        };
+
+        // Initial fetch of the whitelist
+        fetchWhitelist();
 
         // Add username to whitelist
         document.getElementById('addButton').onclick = () => {
@@ -51,11 +58,12 @@
                         const li = document.createElement('li');
                         li.textContent = username;
                         whitelistUsers.appendChild(li);
-                        usernameInput.value = '';
+                        usernameInput.value = ''; // Clear the input
                     } else {
-                        alert('Failed to add user to whitelist');
+                        alert('Failed to add user to whitelist: ' + response.statusText);
                     }
-                });
+                })
+                .catch(err => console.error('Error adding user to whitelist:', err));
             }
         };
 
@@ -69,9 +77,10 @@
                     whitelistUsers.innerHTML = ''; // Clear the list
                     alert('Whitelist has been reset');
                 } else {
-                    alert('Failed to reset whitelist');
+                    alert('Failed to reset whitelist: ' + response.statusText);
                 }
-            });
+            })
+            .catch(err => console.error('Error resetting whitelist:', err));
         };
 
         // Download whitelist as a Lua table
@@ -89,7 +98,8 @@
                     a.click();
                     document.body.removeChild(a);
                     URL.revokeObjectURL(url);
-                });
+                })
+                .catch(err => console.error('Error downloading whitelist:', err));
         };
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
