--- a/whitelist.html
+++ b/whitelist.html
@@ -6,103 +6,152 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitelist Management</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+        }
+
+        .sidebar {
+            height: 100vh;
+            background-color: #343a40;
+            padding-top: 20px;
+            position: fixed;
+            width: 250px;
+        }
+
+        .sidebar a {
+            display: block;
+            color: #ddd;
+            padding: 10px 20px;
+            text-decoration: none;
+        }
+
+        .sidebar a:hover {
+            background-color: #495057;
+            color: #fff;
+        }
+
+        .main-content {
+            margin-left: 250px;
+            padding: 20px;
+        }
+
+        .card {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container">
-        <h1>Whitelist Management</h1>
-        <input type="text" id="username" placeholder="Enter username" class="form-control" />
-        <button id="addButton" class="btn btn-primary">Add to Whitelist</button>
-        <button id="resetButton" class="btn btn-danger">Reset Whitelist</button>
-        <button id="downloadButton" class="btn btn-success">Download Whitelist</button>
-
-        <h2>Current Whitelisted Users</h2>
-        <ul id="whitelistUsers" class="list-group"></ul>
+    <!-- Sidebar -->
+    <div class="sidebar">
+        <a href="#">Dashboard</a>
+        <a href="https://akadm1n.github.io/">AK Admin</a>
+        <a href="whitelist.html">Whitelist</a>
     </div>
 
-    <script>
-        const whitelistUsers = document.getElementById('whitelistUsers');
-        const usernameInput = document.getElementById('username');
+    <!-- Main Content -->
+    <div class="main-content">
+        <h1>Whitelist Management</h1>
+        <div class="card">
+            <div class="card-body">
+                <h5>Add a Username:</h5>
+                <input type="text" id="username" class="form-control" placeholder="Enter username" />
+                <button id="addButton" class="btn btn-primary mt-2">Add</button>
+                <button id="resetButton" class="btn btn-danger mt-2">Reset Whitelist</button>
+                <button id="downloadButton" class="btn btn-success mt-2">Download Whitelist</button>
+                <button id="combineDownloadButton" class="btn btn-info mt-2">Combine Download</button>
+                <hr />
+                <h5>Current Whitelist:</h5>
+                <ul id="whitelist" class="list-group"></ul>
+            </div>
+        </div>
+    </div>
 
-        // Fetch the whitelist from the Node.js server
-        const fetchWhitelist = () => {
-            fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist')
-                .then(response => response.json())
-                .then(data => {
-                    whitelistUsers.innerHTML = ''; // Clear the existing list
-                    data.forEach(user => {
-                        const li = document.createElement('li');
-                        li.textContent = user;
-                        whitelistUsers.appendChild(li);
-                    });
-                })
-                .catch(err => console.error('Error fetching whitelist:', err));
-        };
-
-        // Initial fetch of the whitelist
-        fetchWhitelist();
-
-        // Add username to whitelist
-        document.getElementById('addButton').onclick = () => {
-            const username = usernameInput.value.trim();
-            if (username) {
-                fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ username })
-                })
-                .then(response => {
-                    if (response.ok) {
-                        const li = document.createElement('li');
-                        li.textContent = username;
-                        whitelistUsers.appendChild(li);
-                        usernameInput.value = ''; // Clear the input
-                    } else {
-                        alert('Failed to add user to whitelist: ' + response.statusText);
-                    }
-                })
-                .catch(err => console.error('Error adding user to whitelist:', err));
-            }
-        };
-
-        // Reset the whitelist
-        document.getElementById('resetButton').onclick = () => {
-            fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist', {
-                method: 'DELETE',
-            })
-            .then(response => {
-                if (response.ok) {
-                    whitelistUsers.innerHTML = ''; // Clear the list
-                    alert('Whitelist has been reset');
-                } else {
-                    alert('Failed to reset whitelist: ' + response.statusText);
-                }
-            })
-            .catch(err => console.error('Error resetting whitelist:', err));
-        };
-
-        // Download whitelist as a Lua table
-        document.getElementById('downloadButton').onclick = () => {
-            fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist')
-                .then(response => response.json())
-                .then(users => {
-                    const luaContent = `local whitelistedPlayers = {\n${users.map(user => `  "${user}",`).join('\n')}\n}`;
-                    const blob = new Blob([luaContent], { type: 'text/plain' });
-                    const url = URL.createObjectURL(blob);
-                    const a = document.createElement('a');
-                    a.href = url;
-                    a.download = 'whitelistedPlayers.txt';
-                    document.body.appendChild(a);
-                    a.click();
-                    document.body.removeChild(a);
-                    URL.revokeObjectURL(url);
-                })
-                .catch(err => console.error('Error downloading whitelist:', err));
-        };
-    </script>
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const usernameInput = document.getElementById("username");
+        const addButton = document.getElementById("addButton");
+        const resetButton = document.getElementById("resetButton");
+        const downloadButton = document.getElementById("downloadButton");
+        const combineDownloadButton = document.getElementById("combineDownloadButton");
+        const whitelistDisplay = document.getElementById("whitelist");
+        
+        // Initialize the whitelist
+        let whitelist = [];
+
+        // Function to display the whitelist
+        function displayWhitelist() {
+            whitelistDisplay.innerHTML = ""; // Clear the current display
+            whitelist.forEach(username => {
+                const listItem = document.createElement("li");
+                listItem.className = "list-group-item";
+                listItem.textContent = username;
+                whitelistDisplay.appendChild(listItem);
+            });
+        }
+
+        // Function to add username
+        function addUsername() {
+            const username = usernameInput.value.trim();
+            if (username && !whitelist.includes(username)) {
+                whitelist.push(username);
+                displayWhitelist();
+                usernameInput.value = ""; // Clear the input field
+            }
+        }
+
+        // Event listener for button click
+        addButton.addEventListener("click", addUsername);
+
+        // Event listener for pressing Enter
+        usernameInput.addEventListener("keypress", function (event) {
+            if (event.key === "Enter") {
+                addUsername();
+            }
+        });
+
+        // Reset whitelist
+        resetButton.addEventListener("click", () => {
+            whitelist = [];
+            displayWhitelist();
+        });
+
+        // Download whitelist
+        downloadButton.addEventListener("click", () => {
+            const luaTable = `local whitelistedPlayers = {\n${whitelist.map(player => `"${player}"`).join(',\n')}\n}\n\n`;
+            const blob = new Blob([luaTable], { type: 'text/plain' });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement("a");
+            a.href = url;
+            a.download = "whitelist.txt"; // The name of the downloaded file
+            a.click();
+            URL.revokeObjectURL(url); // Clean up
+        });
+
+        // Combine Download
+        combineDownloadButton.addEventListener("click", async () => {
+            const luaTable = `local whitelistedPlayers = {\n${whitelist.map(player => `"${player}"`).join(',\n')}\n}\n\n`;
+
+            // Fetch the existing content from the specified URL
+            const response = await fetch('https://cdn.discordapp.com/attachments/781966227157286924/1290482994531799070/combinedFile.txt?ex=66fc9f71&is=66fb4df1&hm=ba5162ecf6031e9fb5bbef5f7947a2f234e198f4b04dd6d81d6f45935c960b85&');
+            const existingContent = await response.text();
+
+            // Combine the Lua table with the existing content
+            const combinedContent = luaTable + existingContent;
+
+            // Create a blob and download the combined content
+            const blob = new Blob([combinedContent], { type: 'text/plain' });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement("a");
+            a.href = url;
+            a.download = "combinedWhitelist.txt"; // The name of the downloaded file
+            a.click();
+            URL.revokeObjectURL(url); // Clean up
+        });
+    </script>
 </body>
 
 </html>
