--- a/whitelist.html
+++ b/whitelist.html
@@ -84,7 +84,7 @@
                     const url = URL.createObjectURL(blob);
                     const a = document.createElement('a');
                     a.href = url;
-                    a.download = 'whitelistedPlayers.lua';
+                    a.download = 'whitelistedPlayers.txt';
                     document.body.appendChild(a);
                     a.click();
                     document.body.removeChild(a);
