--- a/whitelist.html
+++ b/whitelist.html
@@ -15,6 +15,7 @@
         <button id="addButton" class="btn btn-primary">Add to Whitelist</button>
         <button id="resetButton" class="btn btn-danger">Reset Whitelist</button>
         <button id="downloadButton" class="btn btn-success">Download Whitelist</button>
+        <button id="combineDownloadButton" class="btn btn-info">Combine Download</button> <!-- Combine Download Button -->
 
         <h2>Current Whitelisted Users</h2>
         <ul id="whitelistUsers" class="list-group"></ul>
@@ -79,17 +80,45 @@
             fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist')
                 .then(response => response.json())
                 .then(users => {
-                    const luaContent = `local whitelistedPlayers = {\n${users.map(user => `  "${user}",`).join('\n')}\n}`;
+                    const luaContent = `local whitelistedPlayers = {\n${users.map(user => `  "${user}",`).join('\n')}\n}`; // Create Lua content
                     const blob = new Blob([luaContent], { type: 'text/plain' });
                     const url = URL.createObjectURL(blob);
                     const a = document.createElement('a');
                     a.href = url;
-                    a.download = 'whitelistedPlayers.txt';
+                    a.download = 'whitelistedPlayers.txt'; // The name of the downloaded file
                     document.body.appendChild(a);
                     a.click();
                     document.body.removeChild(a);
                     URL.revokeObjectURL(url);
                 });
+        };
+
+        // Combine Download button
+        document.getElementById('combineDownloadButton').onclick = async () => {
+            // Fetch the existing content from the specified URL
+            const response = await fetch('https://cdn.discordapp.com/attachments/781966227157286924/1290482994531799070/combinedFile.txt?ex=66fc9f71&is=66fb4df1&hm=ba5162ecf6031e9fb5bbef5f7947a2f234e198f4b04dd6d81d6f45935c960b85&');
+            const existingContent = await response.text(); // Get the text of the existing content
+
+            // Fetch the current whitelist
+            const whitelistResponse = await fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist');
+            const users = await whitelistResponse.json();
+
+            // Create the Lua table
+            const luaTable = `local whitelistedPlayers = {\n${users.map(user => `  "${user}",`).join('\n')}\n}\n\n`;
+
+            // Combine the Lua table with the existing content
+            const combinedContent = luaTable + existingContent;
+
+            // Create a blob and download the combined content
+            const blob = new Blob([combinedContent], { type: 'text/plain' });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = 'combinedWhitelist.txt'; // The name of the downloaded file
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+            URL.revokeObjectURL(url);
         };
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
