--- a/whitelist.html
+++ b/whitelist.html
@@ -26,25 +26,21 @@
         const usernameInput = document.getElementById('username');
 
         // Fetch the whitelist from the Node.js server
-        const fetchWhitelist = () => {
-            fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist')
-                .then(response => response.json())
-                .then(data => {
-                    whitelistUsers.innerHTML = ''; // Clear the list first
-                    data.forEach(user => {
-                        const li = document.createElement('li');
-                        li.textContent = user;
-                        whitelistUsers.appendChild(li);
-                    });
+        fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist')
+            .then(response => response.json())
+            .then(data => {
+                data.forEach(user => {
+                    const li = document.createElement('li');
+                    li.textContent = user;
+                    whitelistUsers.appendChild(li);
                 });
-        };
-
-        fetchWhitelist(); // Initial fetch to load existing users
+            });
 
         // Add username to whitelist
         document.getElementById('addButton').onclick = () => {
             const username = usernameInput.value.trim();
             if (username) {
+                // Fetch the current whitelist first
                 fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist')
                     .then(response => response.json())
                     .then(users => {
@@ -56,11 +52,11 @@
                             users.push(username);
                             // Send the updated list back to the server
                             fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist', {
-                                method: 'PUT', // Use PUT to update the existing whitelist
+                                method: 'PUT', // Assuming the server supports PUT for updates
                                 headers: {
                                     'Content-Type': 'application/json'
                                 },
-                                body: JSON.stringify(users)
+                                body: JSON.stringify(users) // Send the entire updated list
                             })
                             .then(response => {
                                 if (response.ok) {
