--- a/whitelist.html
+++ b/whitelist.html
@@ -15,7 +15,7 @@
         <button id="addButton" class="btn btn-primary">Add to Whitelist</button>
         <button id="resetButton" class="btn btn-danger">Reset Whitelist</button>
         <button id="downloadButton" class="btn btn-success">Download Whitelist</button>
-        <button id="combineDownloadButton" class="btn btn-info">Combine Download</button> <!-- Combine Download Button -->
+        <button id="combineDownloadButton" class="btn btn-info">Combine Download</button>
 
         <h2>Current Whitelisted Users</h2>
         <ul id="whitelistUsers" class="list-group"></ul>
@@ -40,36 +40,23 @@
         document.getElementById('addButton').onclick = () => {
             const username = usernameInput.value.trim();
             if (username) {
-                // Fetch the current whitelist first
-                fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist')
-                    .then(response => response.json())
-                    .then(users => {
-                        // Check if user already exists
-                        if (users.includes(username)) {
-                            alert('User is already in the whitelist.');
-                        } else {
-                            // If user doesn't exist, add to the whitelist
-                            users.push(username);
-                            // Send the updated list back to the server
-                            fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist', {
-                                method: 'PUT', // Assuming the server supports PUT for updates
-                                headers: {
-                                    'Content-Type': 'application/json'
-                                },
-                                body: JSON.stringify(users) // Send the entire updated list
-                            })
-                            .then(response => {
-                                if (response.ok) {
-                                    const li = document.createElement('li');
-                                    li.textContent = username;
-                                    whitelistUsers.appendChild(li);
-                                    usernameInput.value = '';
-                                } else {
-                                    alert('Failed to update whitelist');
-                                }
-                            });
-                        }
-                    });
+                fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ username })
+                })
+                .then(response => {
+                    if (response.ok) {
+                        const li = document.createElement('li');
+                        li.textContent = username;
+                        whitelistUsers.appendChild(li);
+                        usernameInput.value = '';
+                    } else {
+                        alert('Failed to add user to whitelist');
+                    }
+                });
             }
         };
 
