--- a/whitelist.html
+++ b/whitelist.html
@@ -13,6 +13,7 @@
         <h1>Whitelist Management</h1>
         <input type="text" id="username" placeholder="Enter username" class="form-control" />
         <button id="addButton" class="btn btn-primary">Add to Whitelist</button>
+        <button id="removeButton" class="btn btn-warning">Remove from Whitelist</button> <!-- New Remove Button -->
         <button id="resetButton" class="btn btn-danger">Reset Whitelist</button>
         <button id="downloadButton" class="btn btn-success">Download Whitelist</button>
         <button id="combineDownloadButton" class="btn btn-info">Combine Download</button>
@@ -32,6 +33,7 @@
                 data.forEach(user => {
                     const li = document.createElement('li');
                     li.textContent = user;
+                    li.className = 'list-group-item d-flex justify-content-between align-items-center'; // Bootstrap styling
                     whitelistUsers.appendChild(li);
                 });
             });
@@ -51,10 +53,37 @@
                     if (response.ok) {
                         const li = document.createElement('li');
                         li.textContent = username;
+                        li.className = 'list-group-item d-flex justify-content-between align-items-center';
                         whitelistUsers.appendChild(li);
                         usernameInput.value = '';
                     } else {
                         alert('Failed to add user to whitelist');
+                    }
+                });
+            }
+        };
+
+        // Remove username from whitelist
+        document.getElementById('removeButton').onclick = () => {
+            const username = usernameInput.value.trim();
+            if (username) {
+                fetch('https://b9147066-c15a-4ff8-aa2e-0c3587462bab-00-3taxu2quvjj99.janeway.replit.dev/whitelist', {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ username })
+                })
+                .then(response => {
+                    if (response.ok) {
+                        const items = Array.from(whitelistUsers.getElementsByTagName('li'));
+                        const userItem = items.find(li => li.textContent === username);
+                        if (userItem) {
+                            whitelistUsers.removeChild(userItem);
+                        }
+                        usernameInput.value = '';
+                    } else {
+                        alert('Failed to remove user from whitelist');
                     }
                 });
             }
